--- a/preview/nova/v15/pricing/nova-pricing.yaml
+++ b/preview/nova/v15/pricing/nova-pricing.yaml
@@ -75,6 +75,16 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/OfferResponse'
+        '400':
+          $ref: '../common/nova-common.yaml#/components/responses/ErrorResponse'
+        '401':
+          $ref: '../common/nova-common.yaml#/components/responses/ErrorResponse'
+        '403':
+          $ref: '../common/nova-common.yaml#/components/responses/ErrorResponse'
+        '500':
+          $ref: '../common/nova-common.yaml#/components/responses/ErrorResponse'
+        'default':
+          $ref: '../common/nova-common.yaml#/components/responses/ErrorResponse'
   /nova/v15/pricing/offers/trip-search-offers:
     post:
       operationId: createTripSearchOffers
@@ -86,6 +96,16 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/OfferResponse'
+        '400':
+          $ref: '../common/nova-common.yaml#/components/responses/ErrorResponse'
+        '401':
+          $ref: '../common/nova-common.yaml#/components/responses/ErrorResponse'
+        '403':
+          $ref: '../common/nova-common.yaml#/components/responses/ErrorResponse'
+        '500':
+          $ref: '../common/nova-common.yaml#/components/responses/ErrorResponse'
+        'default':
+          $ref: '../common/nova-common.yaml#/components/responses/ErrorResponse'
   /nova/v15/pricing/offers/interval-search-offers:
     post:
       operationId: createIntervalSearchOffers
@@ -97,6 +117,16 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/OfferResponse'
+        '400':
+          $ref: '../common/nova-common.yaml#/components/responses/ErrorResponse'
+        '401':
+          $ref: '../common/nova-common.yaml#/components/responses/ErrorResponse'
+        '403':
+          $ref: '../common/nova-common.yaml#/components/responses/ErrorResponse'
+        '500':
+          $ref: '../common/nova-common.yaml#/components/responses/ErrorResponse'
+        'default':
+          $ref: '../common/nova-common.yaml#/components/responses/ErrorResponse'
 
 
 components:
