Update to version 0.0.1-SNAPSHOT

--- a/preview/nova/v15/pricing/nova-pricing.yaml
+++ b/preview/nova/v15/pricing/nova-pricing.yaml
@@ -128,12 +128,17 @@ components:
       type: object
     # ch.voev.nova.services.nova.v15.pricing.OfferResponse
     OfferResponse:
+      allOf:
+        - $ref: '../common/nova-common.yaml#/components/schemas/NOVAResponse'
       type: object
       properties:
-        messages: 
+        offers: 
           type: array
           items:
-            $ref: '../common/nova-common.yaml#/components/schemas/Message'
+            $ref: '#/components/schemas/Offer'
           minItems: 0
+    # ch.voev.nova.services.nova.v15.pricing.Offer
+    Offer:
+      type: object
 
     
