--- a/preview/nova/v15/common/nova-common.yaml
+++ b/preview/nova/v15/common/nova-common.yaml
@@ -133,13 +133,23 @@ components:
         - type
     # ch.voev.nova.services.nova.v15.common.NOVAResponse
     NOVAResponse:
+      discriminator:
+        propertyName: objectType
+        mapping:
+          NOVAResponse: '#/components/schemas/NOVAResponse'
+          OfferResponse: '../pricing/nova-pricing.yaml#/components/schemas/OfferResponse'
       type: object
       properties:
+        objectType:
+          description: Attribute is used as discriminator for inheritance between data types.
+          type: string
         messages: 
           type: array
           items:
             $ref: '#/components/schemas/Message'
           minItems: 0
+      required:
+        - objectType
     # ch.voev.nova.services.nova.v15.common.DidokCode
     DidokCode:
       description: >-
