--- a/preview/nova/v15/common/nova-common.yaml
+++ b/preview/nova/v15/common/nova-common.yaml
@@ -278,8 +278,75 @@ components:
     # ch.voev.nova.services.nova.v15.common.BusinessLog
     BusinessLog:
       type: object
+    # ch.voev.nova.services.nova.v15.common.CountryCode
+    CountryCode:
+      description: >-
+        <html>
+          <head>
+        		<style>
+        			p {padding:0px; margin:0px;}
+        		</style>
+        	</head>
+          <body>
+        Data type represents an ISO 3166 alpha-2 country code. These codes always consist of two capital letters like &quot;CH&quot; or &quot;FR&quot;</body>
+        </html>
+      type: object
+      properties:
+        code: 
+          description: >-
+            ISO 3166 alpha-2 country code.
+          type: string
+          minLength: 2
+          maxLength: 2
+    # ch.voev.nova.services.nova.v15.common.PostalAddress
+    PostalAddress:
+      type: object
+      properties:
+        countryCode: 
+          $ref: '#/components/schemas/CountryCode'
+        street: 
+          type: string
+          maxLength: 30
+        supplement: 
+          type: string
+          maxLength: 30
+        postalCode: 
+          type: string
+          maxLength: 15
+        city: 
+          type: string
+          minLength: 1
+
+          maxLength: 30
+      required:
+        - city
 
     
+    # ch.voev.nova.services.nova.v15.common.TimeUnit
+    TimeUnit:
+      description: >-
+        <html>
+          <head>
+        		<style>
+        			p {padding:0px; margin:0px;}
+        		</style>
+        	</head>
+          <body>
+        Enumeration represents time units.    
+        <br>    
+        <br>NOVA 14 Mapping:    
+        <br>- nova-base.xsd: ZeitEinheit    
+        <br></body>
+        </html>
+      type: string
+      enum:
+        - MINUTES
+        - HOURS
+        - DAYS
+        - WEEKS
+        - MONTHS
+        - YEARS
+
     # ch.voev.nova.services.nova.v15.common.MessageType
     MessageType:
       description: >-
