Update to version 0.0.1-SNAPSHOT

--- a/preview/nova/v15/common/nova-common.yaml
+++ b/preview/nova/v15/common/nova-common.yaml
@@ -284,7 +284,7 @@ components:
       properties:
         countryCode: 
           description: >-
-            ISO 3166 alpha-2 country code.
+            ISO 3166 alpha-2 country code. These codes always consist of two capital letters like "CH" or "FR".
           type: string
           minLength: 2
           maxLength: 2
